tests/fixtures/invalid/pow_float_dict_none.py
# Cannot call pow() with Float, Dict[str, int], None
x = pow(1.0, {"a": 1}, None)
